--- a/vscode-extension/package.json
+++ b/vscode-extension/package.json
@@ -2,7 +2,7 @@
   "name": "stata-ai-fusion",
   "displayName": "Stata AI Fusion",
   "description": "Run Stata code, view graphs, and get AI assistance — all in VS Code",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "publisher": "statafusion",
   "engines": { "vscode": "^1.85.0" },
   "categories": ["Programming Languages", "Data Science", "Machine Learning"],
@@ -17,6 +17,7 @@
     "workspaceContains:**/*.ado"
   ],
   "main": "./dist/extension.js",
+  "icon": "icon.png",
   "contributes": {
     "languages": [{
       "id": "stata",
